added outcomes and resources to course.

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -72,8 +72,16 @@
   </table>
 </fieldset>
 <fieldset>
+  <legend><%= f.label :outcomes, "Learning Outcomes" %></legend>
+    <%= f.text_area :outcomes, :size => "80x20" %>
+</fieldset>
+<fieldset>
   <legend><%= f.label :content %></legend>
     <%= f.text_area :content, :size => "80x20" %>
+</fieldset>
+<fieldset>
+  <legend><%= f.label :resources %></legend>
+    <%= f.text_area :resources, :size => "80x20" %>
 </fieldset>
   <div class="actions">
     <%= f.submit %>
