sort courses by module code

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -29,7 +29,7 @@
 <hr />
 
 <p>
-  <b>Learning Outcomes.</b>
+  <b>Module Learning Outcomes.</b>
   On successful completion of this module the learner should be able to:<br />
   <%= raw BlueCloth.new(@course.outcomes).to_html %>
 </p>
@@ -37,14 +37,14 @@
 <hr />
 
 <p>
-  <b>Content</b>
+  <b>Indicative Content</b>
   <%= raw BlueCloth.new(@course.content).to_html %>
 </p>
 
 <hr />
 
 <p>
-  <b>Resources</b>
+  <b>Module Resources</b>
   <%= raw BlueCloth.new(@course.resources).to_html %>
 </p>
 
