modified and used abilities

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -52,7 +52,7 @@
   <% end %>
 </ul>
 
-<% if can? :update, @project %>
+<% if can? :show, @project.direction %>
   <h3>Assessment</h3>
   <%= render @project.direction %>
 <% end %>
