--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -49,7 +49,10 @@
 </p>
 
 <hr />
-
+<% if can? :edit, @course %>
 <%= link_to 'Edit', edit_course_path(@course) %> |
+<% end %>
+<% if can? :destroy, @course %>
 <%= link_to 'Destroy', @course, method: :delete, data: { confirm: 'Are you sure?' } %> |
+<% end %>
 <%= link_to 'Back', courses_path %>
