provide for edit and delete teachings.

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -39,6 +39,11 @@
 <li>
 <%= link_to teaching.academic, teaching.academic %>: 
 <%= teaching.load %>.
+<% if can? :update, @course %>
+  <div class="edit">
+    <%= link_to edit_symbol, edit_teaching_path(teaching) %>
+  </div>
+<% end %>
 </li>
 <% end %>
 </ul>
