added code to student.

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -71,6 +71,14 @@
       </tr>
       <tr>
 	<td>
+	  <%= f.label :code %>
+	</td>
+	<td>
+	  <%= f.text_field :code %>
+	</td>
+      </tr>
+      <tr>
+	<td>
 	  <%= f.label :programme %>
 	</td>
 	<td>
