--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -25,6 +25,11 @@
 <hr />
 
 <p>
+  <b>Research Area:</b>
+  <%= @student.area %>
+</p>
+
+<p>
   <b>Dissertation Title:</b>
   <%= @student.title %>
 </p>
