--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @record %> |
-<%= link_to 'Back', records_path %>
+<%= link_to 'Back', @record.academic %>
