added year column to author table

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -19,6 +19,14 @@
     <div class="field">
       <tr>
 	<td>
+	  <%= f.label :year %>
+	</td>
+	<td>
+	  <%= f.number_field :year %>
+	</td>
+      </tr>
+      <tr>
+	<td>
 	  <%= f.label :title %>
 	</td>
 	<td>
