--- a/app/views/directions/index.html.erb
+++ b/app/views/directions/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Project reports and marks.</h1>
+<h3>Projects <%= Project.academic_year %></h3>
+<h1>Reports and Marks.</h1>
 
 <% if @programme %>
 <% content_for :side do %>
