add modules to menu.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -20,5 +20,8 @@ a list of <%= Room.all.count %> <%= link_to 'postgrad rooms', rooms_path %>,
 <li>
 a list of <%= Author.current.count %> <%= link_to 'project students', authors_path %>.
 </li>
+<li>
+a list of <%= Course.all.count %> <%= link_to 'module descriptors', courses_path %>.
+</li>
 </ul>
 </p>
