--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,8 @@ MathJax.Hub.Config({
       <% end %>
       <%= link_to 'Academics', academics_path %> |
       <%= link_to 'Graduate Students', students_path %> |
-      <%= link_to 'Rooms', rooms_path %> |
       <%= link_to 'Project Students', authors_path %> |
+      <%= link_to 'Modules', courses_path %> |
     </div>
     <div id="login"> |
       <% if user_signed_in? %>
