enable sign up.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@ MathJax.Hub.Config({
         <%= link_to current_user.email, edit_user_registration_path %> |
         <%= link_to 'Sign out', destroy_user_session_path, :method => :delete, :confirm => "Sign out?" %> |
       <% else %>
+        <%= link_to "Sign up", new_registration_path(resource_name) %> |
         <%= link_to 'Sign in', new_user_session_path %> |
       <% end %>
     </div>
