--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -25,3 +25,11 @@ a list of <%= Course.all.count %> <%= link_to 'module descriptors', courses_path
 </li>
 </ul>
 </p>
+
+<p>
+<ul>
+<li>
+<%= link_to 'enrol', new_enrolment_path(:user_id => current_user) %> for final year projects.
+</li>
+</ul>
+</p>
