--- a/app/views/proposals/_form.html.erb
+++ b/app/views/proposals/_form.html.erb
@@ -12,6 +12,7 @@
   <% end %>
 
   <%= f.hidden_field :enrolment_id %>
+  <%= f.hidden_field :accepted %>
 
   <div class="field">
     <%= f.label :title %><br />
