--- a/app/views/enrolments/show.html.erb
+++ b/app/views/enrolments/show.html.erb
@@ -6,6 +6,7 @@
 <% @enrolment.proposals.each do |proposal| %>
 <li>
 <%= proposal.title_and_supervisor %>
+(<%= proposal.status %>)
 </li>
 <% end %>
 </ul>
@@ -14,5 +15,6 @@
 <%= link_to 'New Proposal', new_proposal_path(:enrolment_id => @enrolment) %>
 </p>
 
+<% if can? :edit, @enrolment %>
 <%= link_to 'Edit', edit_enrolment_path(@enrolment) %> |
-<%= link_to 'Back', enrolments_path %>
+<% end %>
