--- a/app/views/atoms/show.html.erb
+++ b/app/views/atoms/show.html.erb
@@ -1,7 +1,7 @@
-<h3><%= @atom.discipline %></h3>
+<h3><%= @atom.discipline.titleize %></h3>
 <h2>
   <%= @atom.code %>:
-  <%= @atom.title.titleize %>
+  <%= @atom.title %>
 </h2>
 
 <p>
