move weeks fron atom to load

--- a/app/views/loads/_form.html.erb
+++ b/app/views/loads/_form.html.erb
@@ -29,6 +29,8 @@
     <tr>
       <td><%= f.label :year %></td>
       <td><%= f.number_field :year %></td>
+      <td><%= f.label :weeks %></td>
+      <td><%= f.text_field :weeks, :size => 10 %></td>
       <td><%= f.label :times %></td>
       <td><%= f.text_field :times, :size => 40 %></td>
     </tr>
