--- a/app/views/loads/new.html.erb
+++ b/app/views/loads/new.html.erb
@@ -1,5 +1,5 @@
-<h3>New</h3>
+<h3>New Teaching Load</h3>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', loads_path %>
+<%= link_to 'Back', @load.atom %>
