show load.comment

--- a/app/views/loads/edit.html.erb
+++ b/app/views/loads/edit.html.erb
@@ -4,4 +4,4 @@
 
 <hr />
 <%= link_to 'Delete', @load, :confirm => 'Are you sure?', :method => :delete %> |
-<%= link_to 'Back', @load.atom %>
+<%= link_to 'Back', @load %>
