show load comment

--- a/app/views/atoms/show.html.erb
+++ b/app/views/atoms/show.html.erb
@@ -30,6 +30,7 @@
 <%= load.year %>:
 <%= load.hours %> hrs,
 <%= link_to load.academic, load %>.
+<%= load.comment %>
 <% if can? :update, @atom %>
   <div class="edit">
     <%= link_to edit_symbol, edit_load_path(load) %>
