--- a/app/views/loads/index.html.erb
+++ b/app/views/loads/index.html.erb
@@ -5,21 +5,26 @@
 
 <h1>Teaching Load <%= year %>. (<%= loads_by_year.map(&:hours).sum %> hrs)</h1>
 
-
+<div style="font-size:80%;">
 <table>
-<% loads_by_year.group_by(&:academic).sort.each do |academic, loads| %>
+<% loads_by_year.group_by(&:academic).sort_by { |academic, loads| academic.last }.each do |academic, loads| %>
+  <% total = loads.map(&:hours).sum %>
 <tr>
   <td></td>
   <td><b><%= academic %></b></td>
-  <td><%= loads.map(&:hours).sum %></td>
+  <td align="right"><%= total %></td>
+  <td width="300">  
+    <svg height="10"><rect width="<%= total %>" height="10" style="fill:rgb(255,0,0);"/></svg>
+  </td>
 </tr>
 <% loads.each do |load| %>
-<tr>
-  <td><%= link_to load.code, load %></td>
-  <td><%= load.title %></td>
-  <td><%= load.hours %></td>
+<tr style="display: none;">
+  <td style="font-size:80%;line-height:80%;"><%= link_to load.code, load %></td>
+  <td style="font-size:80%;line-height:80%;"><%= load.title %></td>
+  <td style="font-size:80%;line-height:80%;"><%= load.hours %></td>
 </tr>
 <% end %>
 <% end %>
 </table>
+</div>
 <% end %>
