year -> date in loads

--- a/app/views/loads/_form.html.erb
+++ b/app/views/loads/_form.html.erb
@@ -30,8 +30,8 @@
   <legend>Time Tabling</legend>
   <table width="100%">
     <tr>
-      <td><%= f.label :year %></td>
-      <td><%= f.number_field :year, :size => 4 %></td>
+      <td><%= f.label :date, "Date (Year)" %></td>
+      <td><%= f.number_field :date, :size => 4 %></td>
       <td><%= f.label :weeks %></td>
       <td><%= f.text_field :weeks, :size => 10 %></td>
       <td><%= f.label :times %></td>
