--- a/app/views/loads/show.html.erb
+++ b/app/views/loads/show.html.erb
@@ -1,4 +1,4 @@
-<h3>Teaching Load <%= @load.year %></h3>
+<h3>Teaching Load <%= @load.date %></h3>
 <h1><%= link_to @load.atom, @load.atom %></h1>
 
 <p>
