year -> date in loads

--- a/app/views/atoms/show.html.erb
+++ b/app/views/atoms/show.html.erb
@@ -27,7 +27,7 @@
 <ul>
 <% @atom.loads.each do |load| %>
 <li>
-<%= load.year %>:
+<%= load.date %>:
 <%= load.hours %> hrs,
 <%= link_to load.academic, load %>.
 <%= load.comment %>
