--- a/app/views/academics/show.html.erb
+++ b/app/views/academics/show.html.erb
@@ -28,21 +28,21 @@
 </p>
 
 <% if can? :destroy, @academic %>
-<% @academic.loads.group_by(&:year).each do |year, loads_by_year| %>
-<% loads_by_year.group_by(&:semester).sort.each do |semester, loads| %>
-<b><%= year%>: Semester <%= semester %> (<%= loads.map(&:hours).sum %> hrs)</b>
+<% @academic.loads.group_by(&:date).each do |date, loads_by_date| %>
+<% loads_by_date.group_by(&:semester).sort.each do |semester, loads| %>
+<b><%= date%>: Semester <%= semester %> (<%= loads.map(&:hours).sum %> hrs)</b>
 <%= times_table_for(loads.map(&:times_module).join(";")) %>
 <% end %>
 <% end %>
 
-<% @academic.loads.group_by(&:year).each do |year, loads| %>
-<h3 class="edit-head">Teaching Load <%= year %> (<%= loads.map(&:hours).sum %> hrs)</h3>
+<% @academic.loads.group_by(&:date).each do |date, loads| %>
+<h3 class="edit-head">Teaching Load <%= date %> (<%= loads.map(&:hours).sum %> hrs)</h3>
 <ul>
 <% loads.each do |load| %>
 <li>
 <%= load.hours %> hrs,
 <%= link_to load.atom, load.atom %>:
-<%= load.year %>.
+<%= load.date %>.
 </li>
 <% end %>
 </ul>
